force-app/main/default/objects/Lead/fields/App_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>App_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pardot use</description>
    <label>App/Portal User</label>
    <type>Checkbox</type>
</CustomField>