force-app/main/default/objects/Lead/fields/Country_PI__c.field-meta.xml
<CustomField>
    <fullName>Country_PI__c</fullName>
    <description>To be used in Pardot Form Handler</description>
    <label>Country PI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>