force-app/main/default/objects/Lead/fields/Description_PI__c.field-meta.xml
<CustomField>
    <fullName>Description_PI__c</fullName>
    <description>Used to capture Description from Pardot Forms (Contacts US) etc. 
Will be used for Case Mapping via Contact upon Conversion</description>
    <label>Description PI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>