force-app/main/default/objects/Lead/fields/How_many_days_would_you_like__c.field-meta.xml
<CustomField>
    <fullName>How_many_days_would_you_like__c</fullName>
    <label>How many days would you like?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 day</fullName>
            </value>
            <value>
                <fullName>2 days</fullName>
            </value>
            <value>
                <fullName>3 days</fullName>
            </value>
            <value>
                <fullName>4 days</fullName>
            </value>
            <value>
                <fullName>5 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>