force-app/main/default/objects/Lead/fields/leadcap__Facebook_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>leadcap__Facebook_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>Facebook Lead ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>