force-app/main/default/objects/Lead/fields/PI_to_SF_Sync__c.field-meta.xml
<CustomField>
    <fullName>PI_to_SF_Sync__c</fullName>
    <description>To be mapped with Pardot Form Handler</description>
    <label>PI to SF Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>