force-app/main/default/objects/Lead/fields/Preferred_Session__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Session__c</fullName>
    <label>Preferred Session</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 - 7 June (United Square)</fullName>
            </value>
            <value>
                <fullName>10 - 14 June (Forum)</fullName>
            </value>
            <value>
                <fullName>17 - 21 June (Forum)</fullName>
            </value>
            <value>
                <fullName>24 - 28 June (Forum)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>