force-app/main/default/objects/Lead/fields/Student_Gender__c.field-meta.xml
<CustomField>
    <fullName>Student_Gender__c</fullName>
    <label>Student Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Student_Gender</valueSetName>
    </valueSet>
</CustomField>