force-app/main/default/objects/Lead/listViews/This_Week_Enquires.listView-meta.xml
<ListView>
    <fullName>This_Week_Enquires</fullName>
    <columns>FULL_NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Instrument__c</columns>
    <columns>Location__c</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Instrument_Image__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week Enquires</label>
</ListView>